force-app/main/default/objects/Account/fields/Accepting_New_Buprenorphine_Naloxone_pat__c.field-meta.xml
<CustomField>
    <fullName>Accepting_New_Buprenorphine_Naloxone_pat__c</fullName>
    <inlineHelpText>accepting new buprenorphine/naloxone patients</inlineHelpText>
    <label>Accepting Buprenorphine/Naloxone patient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>