force-app/main/default/objects/Account/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Account ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>