force-app/main/default/objects/Account/fields/Alternate_Pharmacy_Manager__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Pharmacy_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Pharmacy Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Alternate Pharmacy Manager)</relationshipLabel>
    <relationshipName>AlternateManager_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>