force-app/main/default/objects/Account/fields/Ave_Num_of_Presc_Dispensed_per_week__c.field-meta.xml
<CustomField>
    <fullName>Ave_Num_of_Presc_Dispensed_per_week__c</fullName>
    <label>Ave Num of Presc Dispensed per week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>