force-app/main/default/objects/Account/fields/Ave_Sch_Other_Disp_Staff_hr_per_week__c.field-meta.xml
<CustomField>
    <fullName>Ave_Sch_Other_Disp_Staff_hr_per_week__c</fullName>
    <label>Ave Sch Other Disp Staff hr per week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>