force-app/main/default/objects/Account/fields/Ave_Sch_Phar_Tech_Assi_hours_per_week__c.field-meta.xml
<CustomField>
    <fullName>Ave_Sch_Phar_Tech_Assi_hours_per_week__c</fullName>
    <label>Ave Sch Phar Tech - Assi hours per week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>