force-app/main/default/objects/Account/fields/Aver_Sch_Pharmacist_Hours_per_week__c.field-meta.xml
<CustomField>
    <fullName>Aver_Sch_Pharmacist_Hours_per_week__c</fullName>
    <label>Aver Sch Pharmacist Hours per week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>