force-app/main/default/objects/Account/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <label>Business Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>