force-app/main/default/objects/Account/fields/Central_Fill_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>Central_Fill_Pharmacy__c</fullName>
    <label>Central Fill Pharmacy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>