force-app/main/default/objects/Account/fields/Chair_Name__c.field-meta.xml
<CustomField>
    <fullName>Chair_Name__c</fullName>
    <label>Chair Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>