force-app/main/default/objects/Account/fields/CIHI_Code__c.field-meta.xml
<CustomField>
    <fullName>CIHI_Code__c</fullName>
    <label>CIHI Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>