force-app/main/default/objects/Account/fields/Committee_ID__c.field-meta.xml
<CustomField>
    <fullName>Committee_ID__c</fullName>
    <label>Committee ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>