force-app/main/default/objects/Account/fields/Committee_Name__c.field-meta.xml
<CustomField>
    <fullName>Committee_Name__c</fullName>
    <label>Committee Name</label>
    <type>TextArea</type>
</CustomField>