force-app/main/default/objects/Account/fields/Created_By_Pharmacy_Manager__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Pharmacy_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created By Pharmacy Manager</label>
    <type>Checkbox</type>
</CustomField>