force-app/main/default/objects/Account/fields/Date_Permit_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Permit_Issued__c</fullName>
    <label>Date Permit Issued</label>
    <type>Date</type>
</CustomField>