force-app/main/default/objects/Account/fields/Days_Pharmacy_is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Days_Pharmacy_is_Closed__c</fullName>
    <label>Days Pharmacy is Closed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>