force-app/main/default/objects/Account/fields/Employees_List__c.field-meta.xml
<CustomField>
    <fullName>Employees_List__c</fullName>
    <label>Employees List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>