force-app/main/default/objects/Account/fields/Group_Retirement_Home__c.field-meta.xml
<CustomField>
    <fullName>Group_Retirement_Home__c</fullName>
    <label>Group Retirement Home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>