force-app/main/default/objects/Account/fields/Immunization__c.field-meta.xml
<CustomField>
    <fullName>Immunization__c</fullName>
    <label>Immunization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>