force-app/main/default/objects/Account/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspector</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Inspector)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>