force-app/main/default/objects/Account/fields/International_School__c.field-meta.xml
<CustomField>
    <fullName>International_School__c</fullName>
    <label>International School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>