force-app/main/default/objects/Account/fields/Lock_and_Leave__c.field-meta.xml
<CustomField>
    <fullName>Lock_and_Leave__c</fullName>
    <label>Lock and Leave</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>