force-app/main/default/objects/Account/fields/Lock_and_Leave_Hours__c.field-meta.xml
<CustomField>
    <fullName>Lock_and_Leave_Hours__c</fullName>
    <label>Lock and Leave Hours</label>
    <length>25</length>
    <type>Text</type>
</CustomField>