force-app/main/default/objects/Account/fields/Long_Term_Care__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Care__c</fullName>
    <label>Long Term Care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>