force-app/main/default/objects/Account/fields/MC_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>MC_Registration_Status__c</fullName>
    <label>MC Registration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>