force-app/main/default/objects/Account/fields/New_Methadone_Patients__c.field-meta.xml
<CustomField>
    <fullName>New_Methadone_Patients__c</fullName>
    <label>New Methadone Patients</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>