force-app/main/default/objects/Account/fields/Next_Inspection_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Next_Inspection_Quarter__c</fullName>
    <label>Next Inspection Quarter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>