force-app/main/default/objects/Account/fields/Next_Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>Next_Inspection_Type__c</fullName>
    <label>Next Inspection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquired RXCY</fullName>
            </value>
            <value>
                <fullName>DCAP Revisit</fullName>
            </value>
            <value>
                <fullName>Post-Opening</fullName>
            </value>
            <value>
                <fullName>Pre-Opening</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Renovation</fullName>
            </value>
            <value>
                <fullName>Routine</fullName>
            </value>
            <value>
                <fullName>Unannounced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>