force-app/main/default/objects/Account/fields/Non_customary_compounding__c.field-meta.xml
<CustomField>
    <fullName>Non_customary_compounding__c</fullName>
    <label>Non-customary compounding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>