force-app/main/default/objects/Account/fields/Not_Allowed_To_Renew__c.field-meta.xml
<CustomField>
    <fullName>Not_Allowed_To_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Allowed To Renew</label>
    <type>Checkbox</type>
</CustomField>