force-app/main/default/objects/Account/fields/Officers_and_Directors__c.field-meta.xml
<CustomField>
    <fullName>Officers_and_Directors__c</fullName>
    <label>Officers and Directors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>