force-app/main/default/objects/Account/fields/Open_all_year__c.field-meta.xml
<CustomField>
    <fullName>Open_all_year__c</fullName>
    <label>Open all year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>