force-app/main/default/objects/Account/fields/Pharmacist_Prescribing__c.field-meta.xml
<CustomField>
    <fullName>Pharmacist_Prescribing__c</fullName>
    <label>Pharmacist Prescribing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>