force-app/main/default/objects/Account/fields/Pharmacy_Address__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Address__c</fullName>
    <formula>BillingStreet &amp; &quot;, &quot; &amp; BillingCity &amp; &quot;, &quot; &amp; BillingState &amp; &quot;, &quot; &amp; BillingPostalCode &amp; &quot;, &quot; &amp; BillingCountry</formula>
    <label>Pharmacy Address</label>
    <type>Text</type>
</CustomField>