force-app/main/default/objects/Account/fields/Pharmacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_ID__c</fullName>
    <label>Pharmacy ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>