force-app/main/default/objects/Account/fields/Pharmacy_Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Licence_Number__c</fullName>
    <label>Pharmacy Licence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>