force-app/main/default/objects/Account/fields/Pharmacy_Manager__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pharmacy Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Managed Pharmacies</relationshipLabel>
    <relationshipName>Pharmacy_Manager_Account</relationshipName>
    <type>Lookup</type>
</CustomField>