force-app/main/default/objects/Account/fields/Pharmacy_Name__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Name__c</fullName>
    <label>Pharmacy Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>