force-app/main/default/objects/Account/fields/Pharmacy_Name_and_Area__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Name_and_Area__c</fullName>
    <formula>Name &amp; &quot; - &quot; &amp;  BillingStreet</formula>
    <label>Pharmacy Name and Area</label>
    <type>Text</type>
</CustomField>