force-app/main/default/objects/Account/fields/Pharmacy_Owner__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pharmacy Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pharmacies Owned</relationshipLabel>
    <relationshipName>PharmacyOwner_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>