force-app/main/default/objects/Account/fields/Pharmacy_Owner_Deprecated__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Owner_Deprecated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pharmacy Owner (Deprecated)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Owned Pharmacies</relationshipLabel>
    <relationshipName>Pharmacy_Owner_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>