force-app/main/default/objects/Account/fields/Pharmacy_Owner_Rep__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Owner_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pharmacy Owner Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Represented Pharmacies</relationshipLabel>
    <relationshipName>Pharmacy_Owner_Rep_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>