force-app/main/default/objects/Account/fields/Pharmacy_Status__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Status__c</fullName>
    <label>Pharmacy Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>