force-app/main/default/objects/Account/fields/Provides_Methadone_Services__c.field-meta.xml
<CustomField>
    <fullName>Provides_Methadone_Services__c</fullName>
    <label>Provides Methadone Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>