force-app/main/default/objects/Account/fields/providing_buprenorphine_naloxone__c.field-meta.xml
<CustomField>
    <fullName>providing_buprenorphine_naloxone__c</fullName>
    <label>providing buprenorphine/naloxone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>