force-app/main/default/objects/Account/fields/Record_Status__c.field-meta.xml
<CustomField>
    <fullName>Record_Status__c</fullName>
    <label>Record Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certified Dispenser</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>