force-app/main/default/objects/Account/fields/School_ID__c.field-meta.xml
<CustomField>
    <fullName>School_ID__c</fullName>
    <label>School ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>