force-app/main/default/objects/Account/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Pharmacist</fullName>
            </value>
            <value>
                <fullName>Practicing</fullName>
            </value>
            <value>
                <fullName>Non-Practicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>