force-app/main/default/objects/Account/fields/Status_Type__c.field-meta.xml
<CustomField>
    <fullName>Status_Type__c</fullName>
    <formula>IF( ISPICKVAL(Active__c, &apos;Yes&apos;) ,&apos;Active&apos;, &apos;Inactive&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Type</label>
    <type>Text</type>
</CustomField>