force-app/main/default/objects/Account/fields/Sterile_Prep__c.field-meta.xml
<CustomField>
    <fullName>Sterile_Prep__c</fullName>
    <label>Sterile Prep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>