force-app/main/default/objects/Account/fields/Total_Open_Hr_of_the_Disp_per_week__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Hr_of_the_Disp_per_week__c</fullName>
    <label>Total Open Hr of the Disp per week</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>