force-app/main/default/objects/Account/recordTypes/Insurance_Broker.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Broker</fullName>
    <active>true</active>
    <label>Insurance Broker</label>
</RecordType>