force-app/main/default/objects/Account/recordTypes/Pharmacy_Corporate.recordType-meta.xml
<RecordType>
    <fullName>Pharmacy_Corporate</fullName>
    <active>true</active>
    <label>Pharmacy Corporate</label>
</RecordType>