force-app/main/default/objects/Account/listViews/Created_By_Pharmacy_Manager.listView-meta.xml
<ListView>
    <fullName>Created_By_Pharmacy_Manager</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_By_Pharmacy_Manager__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Created By Pharmacy Manager</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>